# taefotoapp-windows

./: .gitignore  README.md  REGISTRO FOTO.xlsm  package-lock.json  package.json
.github/workflows/: build-windows.yml  build.yml
db/: schema.sql
scripts/: import_excel.ps1  inspect-db-Cargo.toml  inspect_db.rs  read_excel_strict.ps1
scripts/inspect-db/src/: main.rs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: admin.rs  mod.rs  operation.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: admin.rs  mod.rs  operation.rs
src/components/: app-shell.js
src/store/: app-store.js
src/views/: admin-view.js  operation-view.js
templates/: ambas.xlsx  solo_alumnos.xlsx  solo_grupos.xlsx
