[package]
name = "prestamos-equipos-tauri"
version = "0.1.0"
description = "Aplicacion local de prestamo de equipos"
authors = ["Codex"]
edition = "2021"

[lib]
name = "prestamos_equipos_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
thiserror = "2"
